<resources>
    <string name="app_name">Virtual Parking Garage</string>
    <string name="exercise">Garage</string>
    <string name="enter_an_exercise">Enter your Parking Garage ID</string>
    <string name="weight">Floor</string>
    <string name="enter_a_weight">Enter which floor you\'re on</string>
    <string name="enter_reps">Enter Parking Spot</string>
    <string name="reps">Spot</string>
    <string name="log">Log!</string>
    <string name="nothing_to_show_time_to_hit_the_gym">Nothing to show, time to hit the gym!</string>
    <string name="welcome_to_the_virtual_parking_garage_nplease_sign_in">Welcome To the Virtual Parking Garage.\nPlease Sign In.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">uwuPreferenceFileNameParkingGarage</string>
    <string name="preference_userId_key">uwuPreferenceUserIdKeyParkingGarage</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="quick_find">Quick Find</string>
    <string name="parking_garages">Parking Garages</string>
    <string name="view_current_space">View Current Space</string>
    <string name="options">Options</string>
    <string name="admin_area">Admin Area</string>
    <string name="back">Back</string>

    <string name="search">Search!</string>

    <string name="closest_lot">Closest Lot</string>
    <string name="space_suggested">Space Suggested</string>
    <string name="back_to_welcome_user">Back to Welcome User</string>
    <string name="pay">Pay</string>
    <string name="select_a_space">Select A Space</string>
    <string name="enter_your_payment_information">Enter Your Payment Information</string>
    <string name="options_menu">Options Menu</string>
    <string name="back_to_admin">Back to Admin</string>
    <string name="tow">Tow</string>
    <string name="print">Print</string>
    <string name="text">Text</string>
    <string name="space_selected">Space Selected</string>
    <string name="issue_warning">Issue Warning</string>
    <string name="new_price">New Price</string>
    <string name="update_price">Update Price</string>
    <string name="day_price">Day Price</string>
    <string name="adjust_pricing">Adjust Pricing</string>
    <string name="parking_lots">Parking Lots:</string>
    <string name="lot">Lot:</string>
    <string name="current_space">Current Space</string>
    <string name="currentSpaceBack">Back</string>
    <string name="OptionsBack">BACK</string>

</resources>
