<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/AdjustPricingTextView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/adjust_pricing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DayPassPriceTextView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:text="@string/day_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdjustPricingTextView" />

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Please Enter Username"
        android:hint="@string/new_price"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DayPassPriceTextView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText"
        android:id="@+id/updatePriceButton"
        android:text="@string/update_price"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/updatePriceButton"
        android:id="@+id/backButton"
        android:text="@string/back_to_admin"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>