<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/IssueWarningTextView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/issue_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SelectedSpaceTextView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/space_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IssueWarningTextView"
        />

    <Button
        android:id="@+id/textButton"
        android:layout_width="169dp"
        android:layout_height="101dp"
        android:layout_margin="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="@+id/SelectedSpaceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectedSpaceTextView" />

    <Button
        android:id="@+id/printButton"
        android:layout_width="169dp"
        android:layout_height="101dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/print"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintLeft_toRightOf="@+id/SelectedSpaceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectedSpaceTextView" />

    <Button
        android:id="@+id/backToAdminButton"
        android:layout_width="169dp"
        android:layout_height="101dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/back_to_admin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="@+id/printButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printButton" />

    <Button
        android:id="@+id/towButton"
        android:layout_width="169dp"
        android:layout_height="101dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tow"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintLeft_toRightOf="@+id/printButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printButton" />


</androidx.constraintlayout.widget.ConstraintLayout>