<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/OptionsTextView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/options_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/OptionsInputEditText"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:layout_marginTop="112dp"
        android:hint="@string/enter_your_payment_information"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/OptionsTextView"
        app:layout_constraintStart_toStartOf="@+id/OptionsTextView"
        app:layout_constraintTop_toBottomOf="@id/OptionsTextView" />
    <Button
        android:id="@+id/OptionsBackButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/OptionsInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/OptionsBack"
        android:textSize="25sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>