<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParkingLotsActivity">

    <TextView
        android:id="@+id/ParkingLotsTextView"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/parking_lots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LotOne"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:text="@string/lot"
        app:layout_constraintEnd_toEndOf="@+id/ParkingLotsTextView"
        app:layout_constraintStart_toStartOf="@+id/ParkingLotsTextView"
        app:layout_constraintTop_toBottomOf="@+id/ParkingLotsTextView" />

    <Button
        android:id="@+id/LotTwo"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:text="@string/lot"
        app:layout_constraintEnd_toEndOf="@+id/LotOne"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LotOne"
        app:layout_constraintTop_toBottomOf="@+id/LotOne" />
    <Button
        android:id="@+id/LotThree"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:text="@string/lot"
        app:layout_constraintEnd_toEndOf="@+id/LotTwo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LotTwo"
        app:layout_constraintTop_toBottomOf="@+id/LotTwo" />

    <Button
        android:id="@+id/backToWelcomeUserButton"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/LotThree"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LotThree"
        app:layout_constraintTop_toBottomOf="@+id/LotThree" />

</androidx.constraintlayout.widget.ConstraintLayout>